--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "google-auth-library": "^9.0.0",
     "node-fetch": "^2.7.0",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "openai": "^4.0.0",
+    "form-data": "^4.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
